--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>MIX</title>
 	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
  	<link rel="stylesheet" href="estilos.css" type="text/css" media="all">
  	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,900&display=swap" rel="stylesheet">
  	<script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
@@ -28,8 +29,8 @@
 				</div>
 				<div id="buscador">
 				 			<form action="" method="POST" enctype="" style="align-self: center;">
-							<input type="text" name="buscador" placeholder="buscador">
-							<input type="submit" value="Search" id="boton2">
+							<input type="text" name="buscador" placeholder="buscador" class="botBuscar">
+							<input type="submit" value="Search" class="boton2">
 				        	</form>
 				</div>
 			</div>
@@ -45,7 +46,7 @@
 <!----------------------  	LA BANDA	 ----------------------->
 	    <div class="elemento">
 	    	<div id="seccion1">
-					<div class="grow" style="flex-basis: 100%;">
+					<div class="grow">
 						<h2 id="titular">La Banda</h2>
 					</div>
 					<div id="nota">
@@ -63,7 +64,7 @@
 <!----------------------  	GALERIA	 ----------------------->
 	    <div class="elemento">
 	    	<div id="seccion2">
-		 			<div class="grow" style="flex-basis: 100%;">
+		 			<div class="grow">
 						<h2 id="titular">Galeria</h2>
 					</div>
 					<div class="imagenes">
@@ -80,7 +81,7 @@
 <!----------------------  	DISCOGRAFIA	 ----------------------->
 	    <div class="elemento">
 	    	<div id="seccion3">
-		 			<div class="grow" style="flex-basis: 100%;">
+		 			<div class="grow">
 						<h2 id="titular">Discografía</h2>
 					</div>
 					<div id="disco1">
@@ -128,7 +129,7 @@
 <!----------------------  	NOTICIAS	 ----------------------->
 	    <div class="elemento">
 	    	<div id="seccion4">
-		 			<div class="grow" style="flex-basis: 100%;">
+		 			<div class="grow">
 						<h2 id="titular">Noticias</h2>
 					</div>
 					<div id="news">
@@ -136,7 +137,7 @@
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, officiis magnam incidunt eaque, suscipit iste deleniti quae minus est corrupti eos, illum enim fugit natus, vero consequuntur itaque dicta. Temporibus rem aperiam odit ad recusandae facilis sint voluptate placeat minus.</p>
 					</div>
 					<div id="video">
-						<video width="100%" controls autoplay="">
+						<video width="80%" controls autoplay="">
   						<source src="mp4/mixband.mp4" type="video/mp4">
   						Tu navegador no implementa el elemento <code>video</code>.
 						</video>
@@ -147,7 +148,7 @@
 <!----------------------  	CONTACTO	 ----------------------->
 	    <div class="elemento">
 	    	<div id="contacto">
-		 			<div class="grow" style="flex-basis: 100%;">
+		 			<div class="grow">
 						<h2 id="titular">Contacto</h2>
 					</div>
 					<div id="datos" style="text-align: center;">
