--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <html>
 <head>
 	<title>MIX</title>
-	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	<!----------------------  	BOOSTRAP	 ----------------------->
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/css/bootstrap.min.css" integrity="sha384-SI27wrMjH3ZZ89r4o+fGIJtnzkAnFs3E4qz9DIYioCQ5l9Rd/7UAa8DHcaL8jkWt" crossorigin="anonymous">
+	<!----------------------  	FIN BOOSTRAP	 ----------------------->
+	<meta charset="utf-8" />
  	<link rel="stylesheet" href="estilos.css" type="text/css" media="all">
  	<link rel="stylesheet" href="css/main.css" type="text/css" media="all">
  	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,900&display=swap" rel="stylesheet">
@@ -30,8 +33,8 @@
 				</div>
 				<div id="buscador">
 				 			<form action="" method="POST" enctype="" style="align-self: center;">
-							<input type="text" name="buscador" placeholder="buscador" class="botBuscar">
-							<input type="submit" value="Search" class="boton2">
+							<input type="text" name="buscador" placeholder="buscador">
+							<input type="submit" value="Search" id="boton2">
 				        	</form>
 				</div>
 			</div>
@@ -47,7 +50,7 @@
 <!----------------------  	LA BANDA	 ----------------------->
 	    <div class="elemento">
 	    	<div id="seccion1">
-					<div class="grow">
+					<div class="grow" style="flex-basis: 100%;">
 						<h2 id="titular">La Banda</h2>
 					</div>
 					<div id="nota">
@@ -65,28 +68,92 @@
 <!----------------------  	GALERIA	 ----------------------->
 	    <div class="elemento">
 	    	<div id="seccion2">
-		 			<div class="grow">
+		 			<div class="grow" style="flex-basis: 100%;">
 						<h2 id="titular">Galeria</h2>
 					</div>
 					<div class="imagenes">
-						<img src="img/grupo.jpg" alt="">
-						<img src="img/grupo.jpg" alt="">
-						<img src="img/grupo.jpg" alt="">
-						<img src="img/grupo.jpg" alt="">
-						<img src="img/grupo.jpg" alt="">
-						<img src="img/grupo.jpg" alt="">
+						<img class="img1" src="img/1.jpg" alt="">
+						<img class="img2" src="img/2.jpg" alt="">
+						<img class="img3" src="img/3.jpg" alt="">
+						<img class="img4" src="img/4.jpg" alt="">
+						<img class="img4" src="img/5.jpg" alt="">
+						<img class="img5" src="img/6.jpg" alt="">
 					</div>
 		 	</div>
 	    </div>
+
+	    <div style="width: 100%;" id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  			<ol class="carousel-indicators">
+    			<li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    			<li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    			<li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+    			<li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+    			<li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+    			<li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+  			</ol>
+  		<div  style="width: 60%; margin: 0 auto;" class="carousel-inner">
+    		<div class="carousel-item active">
+      			<img class="d-block w-100" src="img/1.jpg" alt="First slide">
+      			<div class="carousel-caption d-none d-md-block textimg">
+    				<h5>MixRockBand</h5>
+    				<p>Gira por the Roxy</p>
+  				</div>
+    		</div>
+    		<div class="carousel-item">
+      			<img class="d-block w-100" src="img/2.jpg" alt="Second slide">
+      			<div class="carousel-caption d-none d-md-block textimg">
+    				<h5>MixRockBand</h5>
+    				<p>Gira por the Roxy</p>
+  				</div>
+    		</div>
+		    <div class="carousel-item">
+		      <img class="d-block w-100" src="img/3.jpg" alt="Third slide">
+		      	<div class="carousel-caption d-none d-md-block textimg">
+    				<h5>MixRockBand</h5>
+    				<p>Gira por the Roxy</p>
+  				</div>
+		    </div>
+		    <div class="carousel-item">
+		      <img class="d-block w-100" src="img/4.jpg" alt="Third slide">
+		      	<div class="carousel-caption d-none d-md-block textimg">
+    				<h5>MixRockBand</h5>
+    				<p>Gira por the Roxy</p>
+  				</div>
+		    </div>
+		    <div class="carousel-item">
+		      <img class="d-block w-100" src="img/5.jpg" alt="Third slide">
+		      	<div class="carousel-caption d-none d-md-block textimg">
+    				<h5>MixRockBand</h5>
+    				<p>Gira por the Roxy</p>
+  				</div>
+		    </div>
+		    <div class="carousel-item">
+		      <img class="d-block w-100" src="img/6.jpg" alt="Third slide">
+		      	<div class="carousel-caption d-none d-md-block textimg">
+    				<h5>MixRockBand</h5>
+    				<p>Gira por the Roxy</p>
+  				</div>
+		    </div>
+  		</div>
+  		
+  		<a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    		<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    		<span class="sr-only">Previous</span>
+  		</a>
+  		<a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    		<span class="carousel-control-next-icon" aria-hidden="true"></span>
+    		<span class="sr-only">Next</span>
+  		</a>
+		</div>
 <!----------------------  	FIN GALERIA	 ----------------------->
 <!----------------------  	DISCOGRAFIA	 ----------------------->
 	    <div class="elemento">
 	    	<div id="seccion3">
-		 			<div class="grow">
+		 			<div class="grow" style="flex-basis: 100%;">
 						<h2 id="titular">Discografía</h2>
 					</div>
 					<div id="disco1">
-						<img style="width: 100%;" src="img/grupo.jpg" alt="">
+						<img style="width: 100%;" src="img/disco1.jpg" alt="">
 						<div id="list1">
 							<ol>
 								<li>calor y dolor</li>
@@ -99,7 +166,7 @@
 						</div>
 					</div>
 					<div id="disco2">
-						<img style="width: 100%;" src="img/grupo.jpg" alt="">
+						<img style="width: 100%;" src="img/disco2.jpg" alt="">
 						<div id="list2">
 							<ol>
 								<li>calor y dolor</li>
@@ -112,7 +179,7 @@
 						</div>
 					</div>
 					<div id="disco3">
-						<img style="width: 100%;" src="img/grupo.jpg" alt="">
+						<img style="width: 100%;" src="img/disco3.jpg" alt="">
 						<div id="list3">
 							<ol>
 								<li>calor y dolor</li>
@@ -130,7 +197,7 @@
 <!----------------------  	NOTICIAS	 ----------------------->
 	    <div class="elemento">
 	    	<div id="seccion4">
-		 			<div class="grow">
+		 			<div class="grow" style="flex-basis: 100%;">
 						<h2 id="titular">Noticias</h2>
 					</div>
 					<div id="news">
@@ -138,7 +205,7 @@
 						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, officiis magnam incidunt eaque, suscipit iste deleniti quae minus est corrupti eos, illum enim fugit natus, vero consequuntur itaque dicta. Temporibus rem aperiam odit ad recusandae facilis sint voluptate placeat minus.</p>
 					</div>
 					<div id="video">
-						<video width="80%" controls autoplay="">
+						<video width="100%" controls autoplay="">
   						<source src="mp4/mixband.mp4" type="video/mp4">
   						Tu navegador no implementa el elemento <code>video</code>.
 						</video>
@@ -149,7 +216,7 @@
 <!----------------------  	CONTACTO	 ----------------------->
 	    <div class="elemento">
 	    	<div id="contacto">
-		 			<div class="grow">
+		 			<div class="grow" style="flex-basis: 100%;">
 						<h2 id="titular">Contacto</h2>
 					</div>
 					<div id="datos" style="text-align: center;">
@@ -176,10 +243,10 @@
 		                </form>
 					</div>
 					<div id="redes" style="text-align: center;">
-						<a href="https://es-la.facebook.com"><ion-icon class="facebook" name="logo-facebook"></ion-icon></a>
-		            	<a href="https://twitter.com/login?lang=es"><ion-icon class="twitter" name="logo-twitter"></ion-icon></a>
-		            	<a href="https://www.instagram.com/?hl=es-la"><ion-icon class="instagram" name="logo-instagram"></ion-icon></a>
-		            	<a href="https://www.youtube.com/?gl=AR&hl=es-419"><ion-icon class="youtube" name="logo-youtube"></ion-icon></a>
+						<a href="https://es-la.facebook.com"><ion-icon class="btn--facebook" name="logo-facebook"></ion-icon></a>
+		            	<a href="https://twitter.com/login?lang=es"><ion-icon class="btn--twitter" name="logo-twitter"></ion-icon></a>
+		            	<a href="https://www.instagram.com/?hl=es-la"><ion-icon class="btn--instagram" name="logo-instagram"></ion-icon></a>
+		            	<a href="https://www.youtube.com/?gl=AR&hl=es-419"><ion-icon class="btn--youtube" name="logo-youtube"></ion-icon></a>
 					</div>
 		 	</div>
 	    </div>
@@ -187,6 +254,10 @@
 
 </div>
 
-
+<!----------------------  	ESTILOS BOOSTRAP	 ----------------------->
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.0/js/bootstrap.min.js" integrity="sha384-3qaqj0lc6sV/qpzrc1N5DC6i1VRn/HyX4qdPaiEFbn54VjQBEU341pvjz7Dv3n6P" crossorigin="anonymous"></script>
+<!----------------------  	FIN ESTILOS BOOSTRAP	 ----------------------->
 </body>
 </html>
